Adjusted db structure
